# bot-estiv

./: ONBOARDING.md
bot-estiv/apps/api/: Dockerfile  alembic.ini  pyproject.toml
bot-estiv/apps/api/migrations/: env.py
bot-estiv/apps/api/migrations/versions/: 0001_init.py  0002_source_assets.py
bot-estiv/apps/api/scripts/: preview_infographics.py  preview_templates.py  smoke_generate_carousel.py  smoke_generate_post.py  smoke_infographic.py  smoke_real_photos.py
bot-estiv/apps/api/src/bot_estiv/: __init__.py  brand.py  config.py  db.py  graph.py  llm.py  main.py  models.py  schemas.py
bot-estiv/apps/api/src/bot_estiv/agents/: __init__.py  analytics.py  base.py  brand_guardian.py  campaign_planner.py  carousel_planner.py  content_designer.py  copywriter.py  director.py  meta_ads_manager.py  real_photo_curator.py  trend_scout.py  video_editor.py
bot-estiv/apps/api/src/bot_estiv/rag/: __init__.py  ingest.py  retriever.py
bot-estiv/apps/api/src/bot_estiv/routers/: __init__.py  admin.py  analytics.py  approvals.py  assets.py  calendar.py  campaigns.py  inbox.py  posts.py  settings.py  source_assets.py  webhook.py
bot-estiv/apps/api/tests/: conftest.py  test_agents_llm.py  test_brand_guardian.py  test_brand_guardian_contrast.py  test_brand_ingest.py  test_director_classify.py  test_graph_nodes.py  test_infographic_templates.py  test_photo_editor.py  test_real_photo_curator.py  test_routers.py  test_template_renderer_decorations.py  test_tools_canvas_design.py  test_tools_meta_ads_manager.py  test_tools_template_renderer.py  test_tools_video.py
(+65 files in other folders)
